--- a/extention/manifest.json
+++ b/extention/manifest.json
@@ -20,7 +20,7 @@
 	"content_scripts": [
 			{
 					"matches": ["<all_urls>"],
-					"js": ["scripts/content.js", "scripts/categorize.js"]
+					"js": ["scripts/content.js", "scripts/categorize.js", "scripts/config.js"]
 			}
 	]
 }
